--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.4",
     "axios": "^0.20.0",
     "next": "9.5.2",
+    "postmark": "^2.5.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-syntax-highlighter": "^13.5.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
