--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently --raw \"yarn:dev:deps up\" \"yarn:dev:next\"",
+    "dev:next": "next dev",
+    "dev:deps": "docker-compose -f docker-compose.yml",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@quirrel/next": "^0.2.0",
+    "@quirrel/next": "^0.2.1",
     "next": "9.5.2",
     "postmark": "^2.5.5",
     "react": "16.13.1",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
+    "concurrently": "^5.3.0",
     "typescript": "^4.0.2"
   }
 }
