--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/parser": "^7.11.5",
+    "@babel/traverse": "^7.11.5",
     "@quirrel/next": "^0.4.0",
+    "glob": "^7.1.6",
     "next": "9.5.2",
     "postmark": "^2.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-syntax-highlighter": "^13.5.1"
+    "react-syntax-highlighter": "^13.5.1",
+    "typescript-parser": "^2.6.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
