--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@quirrel/next": "^0.4.0",
     "next": "9.5.2",
     "postmark": "^2.5.5",
+    "pusher": "^3.0.1",
+    "pusher-js": "^7.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-syntax-highlighter": "^13.5.1"
+    "react-syntax-highlighter": "^13.5.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
+    "@types/uuid": "^8.3.0",
     "concurrently": "^5.3.0",
     "typescript": "^4.0.2"
   }
