--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently --raw \"yarn:dev:deps up\" \"yarn:dev:next\"",
-    "dev:next": "next dev",
-    "dev:deps": "docker-compose -f docker-compose.yml",
+    "dev": "concurrently --raw quirrel \"next dev\"",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@quirrel/next": "^0.5.0",
+    "@quirrel/next": "^0.8.1",
     "next": "9.5.2",
     "postmark": "^2.5.5",
     "pusher": "^3.0.1",
@@ -25,6 +23,7 @@
     "@types/react": "^16.9.49",
     "@types/uuid": "^8.3.0",
     "concurrently": "^5.3.0",
+    "quirrel": "^0.8.2",
     "typescript": "^4.0.2"
   }
 }
